--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "axios": "^0.27.2",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "draftjs-to-html": "^0.9.1",
+    "jsonp": "^0.2.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "prop-types": "^15.8.1",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -35,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
